# netbox-database

./: CLAUDE.md  DESIGN.md  README.md  pyproject.toml  todo.json
.githooks/: pre-commit
netbox_database/: __init__.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_database/api/: serializers.py  urls.py  views.py
netbox_database/migrations/: 0001_initial.py  0002_mongodb_redis_mosquitto_configs.py  0003_mariadb_replication.py
netbox_database/tests/: test_api.py  test_filtersets.py  test_models.py
